--- a/integrador/src/main/resources/application.properties
+++ b/integrador/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=integrador
 # CONFIGURAÇÕES DO POSTGRESQL
 # --------------------------
 
-spring.datasource.url=jdbc:postgresql://[SEU_HOST]/[SEU_DATABASE]
+spring.datasource.url=postgresql://root:xaSnDd333MnwtIlXkLPaIY5UwvJ1xiGL@dpg-d3etfas9c44c73e6msog-a.oregon-postgres.render.com/integradorbanco
 
-spring.datasource.username=[SEU_USUARIO]
-spring.datasource.password=[SUA_SENHA]
+spring.datasource.username=root
+spring.datasource.password=xaSnDd333MnwtIlXkLPaIY5UwvJ1xiGL
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
