--- a/integrador/src/main/resources/application.properties
+++ b/integrador/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=integrador
 # --------------------------
-# CONFIGURAÇÕES DO POSTGRESQL
+# CONFIGURAÃ‡Ã•ES DO POSTGRESQL
 # --------------------------
 
 spring.datasource.url=postgresql://root:xaSnDd333MnwtIlXkLPaIY5UwvJ1xiGL@dpg-d3etfas9c44c73e6msog-a.oregon-postgres.render.com/integradorbanco
